--- a/index.html
+++ b/index.html
@@ -1,244 +1,15 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>그룹 운영 대시보드 - 팀 운영 현황</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <!-- 사이드바 -->
-    <aside class="sidebar">
-        <div class="sidebar-header">
-            <h1>그룹 운영 대시보드</h1>
-            <p class="sidebar-subtitle">프로젝트 & 인력 관리 시스템</p>
-            <div class="sidebar-stats">
-                <span class="badge badge-blue">총 50명</span>
-                <span class="badge badge-orange">목표 90%</span>
-            </div>
-        </div>
 
-        <nav class="sidebar-nav">
-            <a href="#" class="nav-item active">
-                <span class="icon">📊</span>
-                대시보드
-            </a>
-            <a href="#" class="nav-item">
-                <span class="icon">📈</span>
-                멤버 가동률
-                <span class="badge-small">목표 90%</span>
-            </a>
-            <a href="#" class="nav-item">
-                <span class="icon">📉</span>
-                데이터 분석
-            </a>
-            <a href="#" class="nav-item">
-                <span class="icon">👥</span>
-                인력 관리
-            </a>
-            <a href="#" class="nav-item">
-                <span class="icon">📁</span>
-                프로젝트 관리
-            </a>
-        </nav>
+  <!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>프로젝트 구성원 투입 현황 대시보드 (Community)</title>
+    </head>
 
-        <div class="sidebar-footer">
-            <span class="icon">💬</span>
-            <span>데스크톱 모드</span>
-            <p class="footer-text">클릭시 전환 가능</p>
-        </div>
-    </aside>
-
-    <!-- 메인 콘텐츠 -->
-    <main class="main-content">
-        <!-- 헤더 -->
-        <header class="header">
-            <div>
-                <h2 class="page-title">팀 운영 현황</h2>
-                <p class="page-subtitle">프로젝트와 인력 배치를 한눈에 관리하세요</p>
-            </div>
-            <button class="btn-primary">+ 프로젝트 생성</button>
-        </header>
-
-        <!-- 메트릭 카드 -->
-        <section class="metrics-grid">
-            <div class="metric-card">
-                <div class="metric-header">
-                    <span class="metric-label">전체 팀원</span>
-                    <div class="metric-icon blue">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
-                            <path d="M16 21V19C16 17.9391 15.5786 16.9217 14.8284 16.1716C14.0783 15.4214 13.0609 15 12 15H5C3.93913 15 2.92172 15.4214 2.17157 16.1716C1.42143 16.9217 1 17.9391 1 19V21M12.5 7C12.5 9.20914 10.7091 11 8.5 11C6.29086 11 4.5 9.20914 4.5 7C4.5 4.79086 6.29086 3 8.5 3C10.7091 3 12.5 4.79086 12.5 7ZM20 8V14M23 11H17" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                    </div>
-                </div>
-                <div class="metric-value">56<span class="unit">명</span></div>
-                <div class="metric-footer">평균 가동률 73.8%</div>
-            </div>
-
-            <div class="metric-card">
-                <div class="metric-header">
-                    <span class="metric-label">이번달 투입량</span>
-                    <div class="metric-icon green">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
-                            <path d="M22 12L18 8M22 12L18 16M22 12H9M15 3H3V21H15" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                    </div>
-                </div>
-                <div class="metric-value">41.3<span class="unit">MM</span></div>
-                <div class="metric-footer increase">↗ 지난달 대비 +8%</div>
-            </div>
-
-            <div class="metric-card">
-                <div class="metric-header">
-                    <span class="metric-label">투입 가능 인력</span>
-                    <div class="metric-icon orange">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
-                            <circle cx="12" cy="12" r="10" stroke="white" stroke-width="2"/>
-                            <circle cx="12" cy="12" r="3" fill="white"/>
-                        </svg>
-                    </div>
-                </div>
-                <div class="metric-value">14.7<span class="unit">MM</span></div>
-                <div class="metric-footer">새 프로젝트 배정 가능</div>
-            </div>
-
-            <div class="metric-card">
-                <div class="metric-header">
-                    <span class="metric-label">진행중 프로젝트</span>
-                    <div class="metric-icon purple">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
-                            <rect x="3" y="3" width="18" height="18" rx="2" stroke="white" stroke-width="2"/>
-                            <path d="M8 2V6M16 2V6M3 10H21" stroke="white" stroke-width="2" stroke-linecap="round"/>
-                        </svg>
-                    </div>
-                </div>
-                <div class="metric-value">2<span class="unit">개</span></div>
-                <div class="metric-footer">전체 3개 중</div>
-            </div>
-        </section>
-
-        <!-- 인력 가동률 & 비용 현황 -->
-        <section class="section-header">
-            <h3>
-                <span class="icon-pulse">📊</span>
-                인력 가동률 & 비용 현황
-            </h3>
-            <p class="section-description">카드를 클릭하여 상세 분석을 확인 수 있어요</p>
-        </section>
-
-        <div class="comparison-grid">
-            <!-- 지난달 실적 -->
-            <div class="comparison-card">
-                <div class="comparison-header decline">
-                    <span class="icon">📉</span>
-                    <span>지난달 실적 (1월)</span>
-                    <span class="badge-status decline">감소추세</span>
-                </div>
-
-                <div class="comparison-content">
-                    <div class="stat-box">
-                        <div class="stat-label">팀 가동률</div>
-                        <div class="stat-value large">74.0%</div>
-                        <div class="progress-bar">
-                            <div class="progress-fill" style="width: 74%"></div>
-                        </div>
-                        <div class="stat-note">목표 대비 미달성</div>
-                    </div>
-
-                    <div class="stat-box highlight decline">
-                        <div class="stat-label">유휴 인력</div>
-                        <div class="stat-value">14.5MM</div>
-                        <div class="stat-detail">비가동률 26.0%</div>
-                    </div>
-                </div>
-
-                <div class="comparison-footer">
-                    <div class="footer-item">
-                        <span>총 인건비</span>
-                        <span class="footer-value">7.0억원</span>
-                    </div>
-                    <div class="footer-item highlight decline">
-                        <span>유휴 비용</span>
-                        <span class="footer-value">1.8억원</span>
-                    </div>
-                    <div class="footer-item">
-                        <span>유휴 비용 비율</span>
-                        <span class="footer-value">25.1%</span>
-                    </div>
-                </div>
-            </div>
-
-            <!-- 이번달 예상 -->
-            <div class="comparison-card">
-                <div class="comparison-header increase">
-                    <span class="icon">📈</span>
-                    <span>이번달 예상 (2월)</span>
-                    <span class="badge-status increase">증가추세</span>
-                </div>
-
-                <div class="comparison-content">
-                    <div class="stat-box">
-                        <div class="stat-label">팀 가동률</div>
-                        <div class="stat-value large">73.8%</div>
-                        <div class="progress-bar">
-                            <div class="progress-fill" style="width: 73.8%"></div>
-                        </div>
-                        <div class="stat-note decrease">↘ -0.3% 감소</div>
-                    </div>
-
-                    <div class="stat-box highlight increase">
-                        <div class="stat-label">유휴 인력</div>
-                        <div class="stat-value">14.7MM</div>
-                        <div class="stat-detail">비가동률 26.2%</div>
-                    </div>
-                </div>
-
-                <div class="comparison-footer">
-                    <div class="footer-item">
-                        <span>예상 총 인건비</span>
-                        <span class="footer-value">7.0억원</span>
-                    </div>
-                    <div class="footer-item highlight increase">
-                        <span>예상 유휴 비용</span>
-                        <span class="footer-value">1.8억원</span>
-                    </div>
-                    <div class="footer-item">
-                        <span>비용 변화</span>
-                        <span class="footer-value increase">↗ 증가 272만원</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- 팀별 인력 현황 -->
-        <section class="section-header">
-            <h3>팀별 인력 현황</h3>
-        </section>
-
-        <div class="team-grid">
-            <div class="team-card">
-                <div class="team-header">
-                    <span class="team-dot yellow"></span>
-                    <span class="team-name">본부장</span>
-                </div>
-                <div class="team-count">1명</div>
-            </div>
-
-            <div class="team-card">
-                <div class="team-header">
-                    <span class="team-dot purple"></span>
-                    <span class="team-name">기획그룹</span>
-                </div>
-                <div class="team-count">32명</div>
-            </div>
-        </div>
-
-        <!-- Copy Dialog (숨김) -->
-        <div class="copy-dialog" id="copyDialog" style="display: none;">
-            <span class="dialog-text">Click to copy design</span>
-            <button class="dialog-btn">Copy</button>
-            <button class="dialog-btn">Cancel</button>
-        </div>
-    </main>
-</body>
-</html>
+    <body>
+      <div id="root"></div>
+      <script type="module" src="/src/main.tsx"></script>
+    </body>
+  </html>
+  
